--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
 .main__row {
   display: flex;
   margin: auto;
-  width: 60%;
+  width: 55%;
   border: dashed 1px red;
 }
 
@@ -90,25 +90,26 @@ body {
 
 .main-speed__column {
   display: flex;
-  background: no-repeat left 10px url(img/speed.svg);
+  background: no-repeat left 35px url(img/speed.svg);
   width: 150px;
   margin-right: 80px;
   border: dashed 1px red;
 }
 
 .main-speed__title {
+  margin-top: 20px;
   margin-right: 3px;
   margin-left: 60px;
   font: 35px/43px montserratsemibold, arial, helvetica, sans-serif;
 }
 
 .main-speed__text {
-  margin-top: 15px;
+  margin-top: 35px;
   font: 600 20px/24px montserrat, sans-serif;
 }
 
 .main-speed__item {
-  margin-top: 40px;
+  margin-top: 60px;
   margin-left: -90px;
   font: 12px/15px montserratregular, arial, helvetica, sans-serif;
 }
@@ -116,35 +117,37 @@ body {
 .main-distance__column {
   width: 140px;
   display: flex;
-  background: no-repeat left 7px url(img/road.svg);
+  background: no-repeat left 25px url(img/road.svg);
   border: dashed 1px red;
 }
 
 .main-distance__title {
+  margin-top: 20px;
   margin-right: 5px;
   margin-left: 45px;
   font: 600 35px/43px montserrat, arial, helvetica, sans-serif;
 }
 
 .main-distance__text {
-  margin-top: 15px;
+  margin-top: 35px;
   font: 600 20px/24px montserrat, arial, helvetica, sans-serif;
 }
 
 .main-distance__item {
-  margin-top: 40px;
+  margin-top: 60px;
   margin-left: -90px;
   font: 12px/15px montserratregular, arial, helvetica, sans-serif;
 }
 
 .main__button {
-  width: 100%;
+  display: flex;
   background: no-repeat left url(img/steering-wheel.svg);
   border: dashed 1px red;
 }
 
 .main-text__button {
-  margin-right: 24px;
+  margin-top: 42px;
+  margin-right: 40px;
   margin-left: 25px;
   text-decoration: none;
   color: #000;
@@ -152,14 +155,13 @@ body {
 }
 
 .main-buy__button {
-  margin-top: 7px;
-  border-color: #E51937;
+  margin-top: 30px;
   font: 700 13px/15px montserrat, arial, helvetica, sans-serif;
   color: #e51937;
   padding: 10px 40px;
+  height: fit-content;
   text-decoration: none;
-  border-radius: 0px;
-  outline: none;
+  outline: solid 2px #e51937;
 }
 
 .dropdown {
@@ -208,17 +210,116 @@ body {
   color: #fff;
 }
 
+.block__functions {
+  margin-bottom: 70px;
+}
+
 .block__display {
   display: flex;
+  background: no-repeat left url(img/mobile.svg);
+  margin: 70px 0 15px 50px;
+  border: dashed 1px white;
 }
 
-.display {
-  margin: 66px 0 0 50px;
-}
 
 .display__title {
-  margin-left: 10px;
-  margin-top: 56px;
+  margin-top: 0;
+  margin-right: 10px;
+  margin-left: 45px;
   font: 600 35px/43px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+}
 
+.display__subtitle {
+  margin-top: 15px;
+  font: 600 20px/24px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+}
+
+.display__item{
+  margin-left: -125px;
+  margin-top: 40px;
+  font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+}
+
+.block__wifi {
+  display: run-in;
+  align-items: flex-start;
+  background: no-repeat left 25px url(img/wifi.svg);
+  margin: 0 0 30px 50px;
+  border: dashed 1px white;
+}
+
+.wifi__title {
+  width: 171px;
+  margin-bottom: 0;
+  margin-right: 10px;
+  margin-left: 65px;
+  margin-top: 10px;
+  font: 600 20px/18px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+}
+
+.wifi__item {
+  width: 171px;
+  margin-top: 5px;
+  margin-left: 65px;
+  font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+}
+
+.block__volume {
+  display: flex;
+  margin: 0 0 0 50px;
+  background: no-repeat left url(img/bag.svg);
+  border: dashed 1px white;
+}
+
+.volume__title {
+  margin-top: 0;
+  margin-right: 10px;
+  margin-left: 65px;
+  font: 600 35px/43px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+}
+
+.volume__subtitle {
+  margin-top: 15px;
+  font: 600 20px/24px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+}
+
+.volume__item{
+  width: 171px;
+  margin-left: -140px;
+  margin-top: 40px;
+  font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+}
+
+.main2__button {
+  display: flex;
+  width: 75%;
+  margin: auto;
+  background: no-repeat left url(img/more.svg);
+  border: dashed 1px white;
+}
+
+.main2-text__button {
+  margin-top: 10px;
+  margin-right: 22px;
+  margin-left: 30px;
+  text-decoration: none;
+  color: #000;
+  font: 700 13px/15px montserrat, arial, helvetica, sans-serif;
+}
+
+.main2-buy__button {
+  font: 700 13px/15px montserrat, arial, helvetica, sans-serif;
+  color: #fff;
+  padding: 10px 40px;
+  height: fit-content;
+  text-decoration: none;
+  outline: solid 2px #fff;
 }
