--- a/style.css
+++ b/style.css
@@ -3,25 +3,11 @@ body {
   margin: 0 auto;
 }
 
-.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 1440px;
-  margin: auto;
-}
-
 .header {
   display: flex;
   justify-content: space-between;
   margin: auto;
   width: 92%;
-}
-
-.menu-ru {
-  display: flex;
-  align-items: center;
-  margin-top: 40px;
 }
 
 .menu,
@@ -37,6 +23,7 @@ body {
 }
 
 .menu__item {
+  position: relative;
   font: 15px/18px montserratsemibold, arial, helvetica, sans-serif;
   text-decoration: none;
   margin-right: 46px;
@@ -57,9 +44,44 @@ body {
   border: dashed 1px red;
 }
 
+.menu__item_active::after {
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #e51937;
+  animation: main 1s;
+}
+
+.menu__item:hover {
+  opacity: 0.5;
+}
+
+.menu__item::after {
+  position: absolute;
+  right: 0;
+  bottom: 1px;
+  display: block;
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #e51937;
+  opacity: 0;
+  transition: opacity 0.5s, width 0.5s;
+}
+
+.menu__item:hover::after,
+.menu__item_active::after {
+  opacity: 1;
+  width: 100%;
+}
+
 .main {
   background: no-repeat center top 15px url(img/tesla-wordmark-big.svg);
 }
+
 
 .main__title {
   font: 90px/110px montserratsemibold, arial, helvetica, sans-serif;
@@ -492,4 +514,45 @@ body {
   width: 250px;
   margin-top: 591px;
   margin-left: 498px;
+}
+
+@media (max-width: 765px) {
+  .wrapper {
+    justify-content: center;
+    display: flex;
+
+  }
+
+  .menu,
+  .menu-ru__item {
+    display: none;
+  }
+
+  .main {
+    background: no-repeat center 80px url(img/mobile/background.svg);
+  }
+
+  .main__title {
+    font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    font: 500 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .tesla-header {
+    margin-top: 30px;
+    width: 357px;
+    height: 166px;
+  }
+
+
+
+  .main__row {
+
+  }
+
+  .speed{
+    background: url(img/mobile/speed.svg);
+  }
 }
