--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
   text-decoration: none;
   margin-right: 46px;
   color: #000;
-  border: dashed 1px red;
 }
 
 .menu__item:last-child {
@@ -38,11 +37,11 @@ body {
 }
 
 .menu-ru__item {
+  position: relative;
   font: 600 15px/18px montserrat, arial, helvetica, sans-serif;
   text-decoration: none;
   margin-right: 30px;
   color: #000;
-  border: dashed 1px red;
 }
 
 .menu__item_active::after {
@@ -63,7 +62,7 @@ body {
 .menu__item::after {
   position: absolute;
   right: 0;
-  bottom: 1px;
+  top: 20px;
   display: block;
   content: '';
   width: 0;
@@ -75,6 +74,28 @@ body {
 
 .menu__item:hover::after,
 .menu__item_active::after {
+  opacity: 1;
+  width: 100%;
+}
+
+.menu-ru__item:hover {
+  opacity: 0.5;
+}
+
+.menu-ru__item::after {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #e51937;
+  opacity: 0;
+  transition: opacity 0.5s, width 0.5s;
+}
+
+.menu-ru__item:hover::after {
   opacity: 1;
   width: 100%;
 }
@@ -148,7 +169,6 @@ body {
 
 .main-distance__column {
   display: flex;
-  height: 65px;
   border: dashed 1px red;
 }
 
@@ -211,11 +231,6 @@ body {
   margin-bottom: 37px;
 }
 
-.conteiner {
-  display: flex;
-  justify-content: center;
-  max-width: 1440px;
-}
 
 .main2 {
   display: flex;
@@ -451,11 +466,10 @@ body {
 }
 
 .footer__text {
-
   font: 600 200px/244px montserrat, arial, helvetica, sans-serif;
   margin-top: 100px;
   margin-left: 190px;
-  color: #E51937;
+  color: #e51937;
   opacity: 0.1;
 }
 
@@ -514,18 +528,23 @@ body {
   margin-left: 498px;
 }
 
-@media (max-width: 765px) {
+@media (max-width: 375px) {
   .wrapper {
-    width: 765px;
+    width: 375px;
   }
 
-  .menu__line {
-    display: block;
+  .logo__icon {
+    width: 138px;
+    height: 42px;
   }
 
   .menu,
   .menu-ru__item {
     display: none;
+  }
+
+  .menu__line {
+    margin-bottom: 15px;
   }
 
   .main {
@@ -540,25 +559,26 @@ body {
     font: 500 10px/12px montserrat, arial, helvetica, sans-serif;
   }
 
-  .tesla-header {
+  .tesla-main {
     margin-top: 30px;
     width: 357px;
     height: 166px;
   }
 
-
-
   .main__row {
+    width: 85%;
+    margin: auto;
     display: block;
   }
 
   .main__column {
-    width: 75%;
+    width: 90%;
     margin: auto;
+    margin-bottom: 43px;
   }
 
   .speed{
-    background: no-repeat left url(img/mobile/speed.svg);
+    background: no-repeat left 30px url(img/mobile/speed.svg);
   }
 
   .main-speed__column {
@@ -566,11 +586,203 @@ body {
   }
 
   .main-speed__title {
+    margin: 23px 0 0 50px;
     font: 600 27px/33px montserrat, arial, helvetica, sans-serif;
   }
 
+  .main-distance__title {
+    font: 600 27px/33px montserrat, arial, helvetica, sans-serif;
+    margin-left: 35px;
+  }
+
+  .main-speed__text,
+  .main-distance__text {
+    margin-top: 35px;
+    font: 600 15px/18px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-speed__item {
+    margin-left: 50px;
+    font: 400 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-distance__item {
+    margin-bottom: 0;
+    margin-left: 35px;
+    font: 400 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
   .distance {
-    background: url(img/mobile/road.svg);
+    background: no-repeat left 30px url(img/mobile/road.svg);
+  }
+
+  .main__button {
+    background: no-repeat left url(img/mobile/wheel.svg);
+    width: 95%;
+    margin: auto;
+    justify-content: space-between;
+  }
+
+  .main-text__button {
+    margin-top: 10px;
+    margin-right: 15px;
+    margin-left: 30px;
+  }
+
+  .main-buy__button {
+    margin-top: 0;
+    padding: 10px 35px;
+    color: #fff;
+    outline: solid 2px #fff;
+    background: #e51937;
+  }
+
+  .main2,
+  .footer {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 768px) {
+  .wrapper {
+    width: 768px;
+  }
+
+  .menu,
+  .menu-ru__item {
+    display: none;
+  }
+
+  .menu__line {
+    margin-bottom: 15px;
+  }
+
+  .tesla-main {
+    width: 673px;
+    height: 328px;
+  }
+
+  .main {
+    background: no-repeat center top 105px url(img/ipad/background.svg);
+  }
+
+  .tesla__title {
+    margin-bottom: 85px;
+  }
+
+  .main__icon {
+    margin-bottom: 54px;
+  }
+
+  .main__row {
+    display: block;
+    width: 63%;
+    margin: auto;
+  }
+
+  .speed{
+    background: no-repeat left 30px url(img/ipad/speed.svg);
+  }
+
+  .distance {
+    background: no-repeat left 30px url(img/ipad/road.svg);
+  }
+
+  .main-speed__column {
+    margin-right: 0px;
+  }
+
+  .main-distance__column {
+    height: 80px;
+  }
+
+  .main-speed__title {
+    margin: 15px 0px 0 80px;
+    font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-distance__title {
+    margin-left: 60px;
+    font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-speed__text,
+  .main-distance__text {
+    margin-top: 35px, 40px;
+    font: 600 20px/24px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-speed__item {
+    margin-left: 80px;
+    font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-distance__item {
+    margin-bottom: 10;
+    margin-left: 60px;
+    font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main__button {
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+    margin: auto;
+    background: no-repeat left 30px url(img/ipad/wheel.svg);
+  }
+
+  .main-text__button {
+    margin-left: 35px;
+    margin-top: 35px;
+    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-buy__button {
+    margin-top: 25px;
+    color: #fff;
+    padding: 15px 60px;
+    outline: solid 2px #fff;
+    background: #e51937;
+  }
+
+  .main2,
+  .footer {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .wrapper {
+    width: 1024px;
+  }
+
+  .menu__item {
+    margin-right: 36px;
+    font: 600 13px/18px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .menu-ru__item {
+    margin-right: 25px;
+    font: 600 13px/18px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main {
+    background: no-repeat center 15px url(img/1024/background.svg);
+  }
+
+  .tesla-main {
+    height: 350px;
+  }
+
+  .main__row {
+    width: 70%;
+    margin: auto;
+  }
+
+  .main-speed__column {
+    display: flex;
+    margin-right: 40px;
+    border: dashed 1px red;
   }
 
   .main2,
